# advent_code_2020

./: .gitignore  Cargo.toml  README.md
day_03/: main.rs
day_04/: main.rs
day_05/: main.rs
day_06/: main.rs
day_08/: main.rs
day_09/: main.rs
day_11/: main.rs
day_14/: main.rs
day_16/: main.rs
day_17/: main.rs
day_18/: main.rs  test_1.txt
day_19/: input_2.txt  main.rs
day_20/: main.rs  test_2_0.txt  test_2_180.txt  test_2_270.txt  test_2_90.txt
day_21/: main.rs
day_24/: main.rs
day_25/: main.rs
python/: pyproject.toml
python/aoc_2020/: __init__.py
python/aoc_2020/day_01/: compute.py  test_compute.py
python/aoc_2020/day_02/: compute.py  test_compute.py
python/aoc_2020/day_07/: compute.py  test_compute.py
python/aoc_2020/day_08/: compute.py  test_compute.py
python/aoc_2020/day_09/: compute.py  test_compute.py
python/aoc_2020/day_10/: compute.py  test_compute.py
python/aoc_2020/day_11/: compute.py  test_compute.py
python/aoc_2020/template/: base_runner.py  compute.py  test_compute.py
rust/day_01/: main.rs
rust/day_02/: main.rs
rust/day_05/: main.rs
rust/day_06/: main.rs
rust/day_07/: main.rs
rust/day_08/: main.rs
rust/day_09/: main.rs
rust/day_10/: main.rs
rust/day_12/: main.rs
rust/day_13/: main.rs
rust/day_15/: main.rs
rust/day_19/: test_2.txt
rust/day_20/: test_2_0x.txt  test_2_0y.txt
rust/day_22/: main.rs
rust/day_23/: main.rs
